[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project-quant"
version = "0.8.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "matplotlib>=3.10.9",
    "scipy>=1.14",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "nbstripout>=0.9.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["credit*", "database*", "market_conventions*", "market_structures*", "montecarlo*", "schedules*", "scripts*"]
